<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/login_main_rl"
    >

    <LinearLayout
        android:id="@+id/login_ll_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usernameText"
            android:textSize="14dp"
            />
        <EditText
            android:id="@+id/login_et_userName"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/login_ll_password"
        android:layout_below="@+id/login_ll_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            />
        <EditText
            android:id="@+id/login_et_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/login_bt_login"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_ll_password"
        android:text="@string/login_text"
        android:layout_marginTop="30dp"
        />
    <Button
        android:id="@+id/login_bt_register"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_bt_login"
        android:layout_marginTop="10dp"
        android:text="@string/register_text"
        />
    <RelativeLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_bt_register"
        >

        <Button
            android:id="@+id/login_bt_weCharLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weChatLogin"
            android:textSize="10dp"
            />
        <Button
            android:id="@+id/login_bt_forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textSize="10dp"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>

</RelativeLayout>
